--- a/integrationtest/build.gradle
+++ b/integrationtest/build.gradle
@@ -14,7 +14,8 @@ sourceSets {
 
 
 dependencies {
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    testRuntimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
     testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.141.59'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
