--- a/interpreter/chorus/build.gradle
+++ b/interpreter/chorus/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compileOnly group: 'org.apache.ant', name: 'ant', version: '1.10.11'
     compileOnly group: 'junit', name: 'junit', version: '4.13.2'
     compileOnly group: 'commons-logging', name: 'commons-logging', version: '1.2'
-    compileOnly group: 'log4j', name: 'log4j', version: '1.2.17'
+    compileOnly group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
